--- a/1/dash.conf
+++ b/1/dash.conf
@@ -3,17 +3,13 @@ regtest=1
 dnsseed=0
 upnp=0
 
-# always run a server, even with bitcoin-qt
+# always run a server, even with dash-qt
 server=1
 
 [regtest]
-# don't listen on a port, just connect to node 1
-listen=0
-connect=127.0.0.1:19000
-
 # listen on different ports than default testnet
-port=19010
-rpcport=19011
+port=19000
+rpcport=19001
 
 # enable SSL for RPC server
 #rpcssl=1
@@ -21,7 +17,11 @@ rpcport=19011
 # enable to allow non-localhost RPC connections
 # recommended to change to a subnet, such as your LAN
 #rpcallowip=0.0.0.0/0
-#rpcallowip=::/0
+rpcallowip=::/0
 
-rpcuser=admin2
+rpcuser=admin1
 rpcpassword=123
+
+# [zeromq]
+# Enable publishing of block hashes to <address>.
+zmqpubhashblock=tcp://0.0.0.0:29001
