--- a/2/dash.conf
+++ b/2/dash.conf
@@ -3,13 +3,17 @@ regtest=1
 dnsseed=0
 upnp=0
 
-# always run a server, even with bitcoin-qt
+# always run a server, even with dash-qt
 server=1
 
 [regtest]
+# don't listen on a port, just connect to node 1
+listen=0
+connect=127.0.0.1:19000
+
 # listen on different ports than default testnet
-port=19000
-rpcport=19001
+port=19010
+rpcport=19011
 
 # enable SSL for RPC server
 #rpcssl=1
@@ -17,7 +21,7 @@ rpcport=19001
 # enable to allow non-localhost RPC connections
 # recommended to change to a subnet, such as your LAN
 #rpcallowip=0.0.0.0/0
-#rpcallowip=::/0
+rpcallowip=::/0
 
-rpcuser=admin1
+rpcuser=admin2
 rpcpassword=123
